# arabi

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUES.md  LICENSE  OPTIMIZATION_PLAN.md  PROJECT_MAP.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: COMPARISON.md  gen_all_benchmarks.py  run_benchmarks.py  run_python_all.py  run_stress_tests.py
benchmarks/arabi/: 01_arithmetic.arabi  02_strings.arabi  03_lists.arabi  04_nested_loops.arabi  05_fibonacci.arabi  06_closures.arabi  07_comprehension.arabi  08_classes.arabi  09_fstrings.arabi  10_exceptions.arabi  11_math.arabi  12_dicts.arabi  13_factorial_recursion.arabi  14_bubble_sort.arabi  15_string_processing.arabi  16_bst.arabi  17_nqueens.arabi  18_mandelbrot.arabi  19_ray_sphere.arabi  20_game_of_life.arabi  stress_01_recursion.arabi  stress_02_large_lists.arabi  stress_03_strings.arabi  stress_04_classes.arabi  stress_05_closures.arabi  stress_06_dicts.arabi  stress_07_exceptions.arabi  stress_08_complex_patterns.arabi  stress_09_merge_sort.arabi  stress_09_pi_monte_carlo.arabi  stress_10_matrix_multiply.arabi  stress_11_ackermann.arabi  stress_12_numerical_integration.arabi  stress_13_memoization.arabi  stress_14_string_pipeline.arabi  stress_15_object_tree.arabi  stress_16_functional.arabi  stress_17_state_machine.arabi  stress_18_prime_sieve.arabi  stress_19_deep_closures.arabi  (+19 more)
benchmarks/python/: 01_arithmetic.py  02_strings.py  03_lists.py  04_nested_loops.py  05_fibonacci.py  06_closures.py  07_comprehension.py  08_classes.py  09_fstrings.py  10_exceptions.py  11_math.py  12_dicts.py  13_factorial_recursion.py  14_bubble_sort.py  15_string_processing.py  18_mandelbrot.py  19_ray_sphere.py  20_game_of_life.py  bst_benchmark.py  nqueens_benchmark.py  stress_01_recursion.py  stress_02_large_lists.py  stress_03_strings.py  stress_04_classes.py  stress_05_closures.py  stress_06_dicts.py  stress_07_exceptions.py  stress_08_complex_patterns.py  stress_09_pi_monte_carlo.py  stress_10_matrix_multiply.py  stress_11_ackermann.py  stress_12_numerical_integration.py  stress_13_memoization.py  stress_14_string_pipeline.py  stress_15_object_tree.py  stress_16_functional.py  stress_17_state_machine.py  stress_18_prime_sieve.py  stress_19_deep_closures.py  stress_20_deep_call_chain.py  (+18 more)
crates/arabi-cli/: Cargo.toml
crates/arabi-cli/src/: main.rs
crates/arabi-compiler/: Cargo.toml
crates/arabi-compiler/src/: bytecode.rs  compiler.rs  lib.rs
crates/arabi-core/: Cargo.toml
crates/arabi-core/src/: error.rs  lib.rs  span.rs  token.rs
crates/arabi-jit/: Cargo.toml
crates/arabi-jit/src/: jit.rs  lib.rs
crates/arabi-lexer/: Cargo.toml
crates/arabi-lexer/src/: keywords.rs  lexer.rs  lib.rs
crates/arabi-parser/: Cargo.toml
crates/arabi-parser/src/: ast.rs  lib.rs  parser.rs
crates/arabi-vm/: Cargo.toml
crates/arabi-vm/src/: builtins.rs  error.rs  frame.rs  jit_runtime.rs  lib.rs  vm.rs
crates/arabi-vm/tests/: integration.rs
docs/: BUILTINS.md  STDLIB.md  USAGE.md
examples/: 01_المتغيرات.txt  02_العمليات.txt  03_التحكم.txt  04_الدوال.txt  05_الأصناف.txt  06_الأخطاء.txt  07_القوائم.txt  08_الفهارس.txt  09_النصوص.txt  10_المولّدات.txt  11_التركيبات.txt  12_الاستيراد.txt  13_السياق.txt  14_المقارنات.txt  15_شامل.txt  تجريبي.عربي
examples/projects/: إدارة_المهام.txt  حاسبة.txt  لعبة_تخمين.txt
tests/: 01_variables.arabi  02_arithmetic.arabi  03_strings.arabi  04_lists.arabi  05_control_flow.arabi  06_functions.arabi  07_classes.arabi  08_comprehension.arabi  09_fstrings.arabi  10_sets.arabi  11_dicts.arabi  12_exceptions.arabi  13_closures.arabi  14_generators.arabi  15_match_test.arabi  16_direct.arabi  16_getattr_test.arabi
