[package]
name = "arabi-jit"
description = "Cranelift-based JIT compiler for the Arabi programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arabi-core.workspace = true
arabi-compiler.workspace = true
thiserror.workspace = true
cranelift = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-native = { workspace = true }
target-lexicon = { workspace = true }
