[package]
name = "arabi-lexer"
description = "Lexer/tokenizer for the Arabi programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arabi-core.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
