[package]
name = "arabi-parser"
description = "Parser for the Arabi programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arabi-core.workspace = true
arabi-lexer.workspace = true
thiserror.workspace = true
